<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:id="@+id/tilePane"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MyActivity"
        android:layout_margin="2dp"
        android:splitMotionEvents="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:splitMotionEvents="false"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <ToggleButton
                    android:id="@+id/foodBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:text=""
                    android:textOn=""
                    android:textOff=""
                    android:background="@drawable/red_btn"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/food_ic"
                        android:paddingBottom="0dp"
                        android:paddingTop="30dp"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"/>

                    <com.oakraw.shakenjoy.custom.TextViewImpact
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/food"
                        android:layout_marginBottom="30dp"
                        android:textSize="30sp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white_trans"/>

                </LinearLayout>


            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <ToggleButton
                    android:id="@+id/nightLifeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:text=""
                    android:textOn=""
                    android:textOff=""
                    android:background="@drawable/pink_btn"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/drink_ic"
                        android:paddingBottom="0dp"
                        android:paddingTop="30dp"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"/>

                    <com.oakraw.shakenjoy.custom.TextViewImpact
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/night_life"
                        android:layout_marginBottom="30dp"
                        android:textSize="30sp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white_trans"/>


                </LinearLayout>


            </FrameLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:splitMotionEvents="false"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <ToggleButton
                    android:id="@+id/coffeeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textOn=""
                    android:textOff=""
                    android:layout_margin="2dp"
                    android:background="@drawable/yellow_btn"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/coffee_ic"
                        android:paddingBottom="0dp"
                        android:paddingTop="30dp"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"/>

                    <com.oakraw.shakenjoy.custom.TextViewImpact
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/coffee"
                        android:layout_marginBottom="30dp"
                        android:textSize="30sp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white_trans"/>

                </LinearLayout>


            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <ToggleButton
                    android:id="@+id/dessertBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:text=""
                    android:textOn=""
                    android:textOff=""
                    android:background="@drawable/purple_btn"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/dessert_ic"
                        android:paddingBottom="0dp"
                        android:paddingTop="30dp"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"/>

                    <com.oakraw.shakenjoy.custom.TextViewImpact
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dessert"
                        android:layout_marginBottom="30dp"
                        android:textSize="30sp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white_trans"/>

                </LinearLayout>


            </FrameLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:splitMotionEvents="false"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <ToggleButton
                    android:id="@+id/shoppingBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:text=""
                    android:textOn=""
                    android:textOff=""
                    android:background="@drawable/orange_btn"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/shopping_ic"
                        android:paddingBottom="0dp"
                        android:paddingTop="30dp"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"/>

                    <com.oakraw.shakenjoy.custom.TextViewImpact
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shopping"
                        android:layout_marginBottom="30dp"
                        android:textSize="30sp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white_trans"/>

                </LinearLayout>


            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <ToggleButton
                    android:id="@+id/sightsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textOn=""
                    android:textOff=""
                    android:layout_margin="2dp"
                    android:background="@drawable/green_btn"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"

                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/sights_ic"
                        android:paddingBottom="0dp"
                        android:paddingTop="30dp"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"/>

                    <com.oakraw.shakenjoy.custom.TextViewImpact
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sights"
                        android:layout_marginBottom="30dp"
                        android:textSize="30sp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white_trans"/>

                </LinearLayout>


            </FrameLayout>


        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:background="#a0000000"/>


    <View
        android:id="@+id/shakeArea"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/area_circle"
        android:visibility="invisible"
        android:layout_gravity="center"
        />
    <ImageView
        android:id="@+id/shakeIC"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="100dp"
        android:src="@raw/icon_shake"
        android:visibility="invisible"/>
    <com.oakraw.shakenjoy.custom.TextViewRL
        android:id="@+id/areaSize"
        android:text="0 m"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="90sp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:id="@+id/no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        android:background="@drawable/red_btn">
        <com.oakraw.shakenjoy.custom.TextViewImpact
            android:text="@string/on_internet_connection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="70sp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            />
        <com.oakraw.shakenjoy.custom.TextViewImpact
            android:text="@string/try_again"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="40sp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            />
        </LinearLayout>



    <ProgressBar
        style="@style/my.Progressbar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="-10dp"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_gravity="top" />


</FrameLayout>